для работы дома

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <div class="inner">
           <!-- Header -->
           <header id="header">
-
             <div class="header_column">
                 <div class="header_column_row">
                     <nav id="menu_header">
@@ -43,7 +42,20 @@
                         </form>
                       </section>
                 </div>
-                <div class="header_column_row">3</div>
+                <div class="header_column_row">
+                    <div class="header_column_row_column">
+                        <img src="images/Like.svg" alt="Login Logo">
+                        <button id="login_button" >
+                            1
+                        </button>
+                    </div>
+                    <div class="header_column_row_column">
+                        <img src="images/Cart.svg" alt="Login Logo">
+                        <button id="login_button" >
+                            2
+                        </button>
+                    </div>
+                </div>
             </div>
 
             <nav id="menu_inline">
@@ -60,7 +72,7 @@
 
           <section id="banner">
             <span class="image object">
-                <img src="images/rectangle.png" alt="" />
+               картинка
             </span>
           </section>
 
@@ -79,8 +91,6 @@
                 ><img src="images/Logo.svg" alt="moon rabbit"
               /></a>
             </div>
-            <h2>MOON</h2>
-            <h2>RABBIT</h2>
           </header>
 
           <nav id="menu">
@@ -102,7 +112,11 @@
       </div>
 
       <!-- Scripts -->
-      
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/browser.min.js"></script>
+      <script src="assets/js/breakpoints.min.js"></script>
+      <script src="assets/js/util.js"></script>
+      <script src="assets/js/main.js"></script>
     </div>
   </body>
 </html>
