почти доверстал картинку в main

--- a/index.html
+++ b/index.html
@@ -72,13 +72,16 @@
                 </ul>
               </nav>
           </header>
-
+          <!-- Banner -->
           <section id="banner">
-            <span class="image object">
-               картинка
-            </span>
+            <div class="content">
+              <span class="image object">
+                <img src="images/rectangle.png" alt="" />
+                <h1 class="title-on-image">MOON<br>RABBIT</h1>
+              </span>
+            </div>
           </section>
-
+          <!-- Section -->
           <section>
              под картинкой
 
