--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         <div class="inner">
           <!-- Header -->
           <header id="header">
-            <div class="header_column">
+              <div class="header_column">
                 <div class="header_column_row">
                     <nav id="menu_header">
                         <ul>
                             <li><a href="#">STOCK</a></li>
                             <li><a href="#">DELIVERY TERMS</a></li>
                             <li><a href="contacts.html">CONTACNS</a></li>
-                        </ul>
+                        </ul> 
                     </nav>
                 </div>
                 <div class="header_column_row">
-                    <nav id="menu_header">
+                    <nav id="menu_login">
                         <svg id="loginSVG" xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="24"><path d="M234-276q51-39 114-61.5T480-360q69 0 132 22.5T726-276q35-41 54.5-93T800-480q0-133-93.5-226.5T480-800q-133 0-226.5 93.5T160-480q0 59 19.5 111t54.5 93Zm246-164q-59 0-99.5-40.5T340-580q0-59 40.5-99.5T480-720q59 0 99.5 40.5T620-580q0 59-40.5 99.5T480-440Zm0 360q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q53 0 100-15.5t86-44.5q-39-29-86-44.5T480-280q-53 0-100 15.5T294-220q39 29 86 44.5T480-160Zm0-360q26 0 43-17t17-43q0-26-17-43t-43-17q-26 0-43 17t-17 43q0 26 17 43t43 17Zm0-60Zm0 360Z"/></svg>
                         <ul>
                             <li> <a href="#">LOG IN</a></li>
@@ -34,11 +34,10 @@
                        
                     </nav>
                 </div>
-            </div>
+            </div> 
 
             <div class="header_column">
                 <div class="header_column_row">
-                     <!-- Search -->
                      <section id="search" class="alt">
                         <form method="post" action="#" >
                           <input type="search" name="query" id="query"  autocomplete="off"/>
@@ -59,7 +58,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> 
 
             <nav id="menu_inline">
                 <ul>
@@ -83,7 +82,18 @@
           </section>
           <!-- Section -->
           <section>
-             под картинкой
+            <div class="posts">
+              <article>
+                <h3>Lorem, ipsum.</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis laudantium doloribus nesciunt fugiat dicta maxime, nemo quisquam saepe amet voluptas. Dolore ut numquam labore corrupti vel similique odio perferendis illo molestiae laudantium nisi temporibus quas repellendus consequuntur impedit animi quam quis reiciendis, molestias iste, cupiditate fuga optio a! Error, corrupti? Consequatur temporibus delectus nihil, explicabo harum voluptatem a enim, accusantium quidem cupiditate eaque, expedita rerum laborum! Voluptatum pariatur tenetur, quas repellat laudantium ea perferendis nihil et, laboriosam quasi earum at dolorum. Dolores odio sunt libero, adipisci cumque illo facere maiores expedita enim deleniti voluptatem dolor, perferendis soluta molestiae qui ipsam.
+                </p>
+              </article>
+              <article>
+                <h3>Lorem, ipsum.</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum exercitationem consectetur nesciunt illo! Soluta mollitia aspernatur cumque corporis sapiente suscipit dolore dignissimos nobis pariatur veniam doloremque nesciunt ea, provident voluptates ex? Facilis consequuntur reprehenderit quam commodi possimus, explicabo illum eum debitis sapiente, molestiae velit eaque, quibusdam ipsa assumenda laboriosam expedita.</p>
+              </article>
+            </div>
 
           </section>
         </div>
