--- a/store.html
+++ b/store.html
@@ -76,15 +76,62 @@
               </nav>
           </header>
 
-          <section id="banner">
-            <span class="image object">
-               картинка
-            </span>
-          </section>
-
           <section>
-             под картинкой
+            <header class="major">
+              <h2>BEAUTY</h2>
+            </header>
+            <div class="posts">
+              <article>
+                <ul class="mashroom_list">
+                  <li>
+                    <img src="images/group5.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="images/group6.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="images/group7.svg" alt="">
+                  </li>
+                </ul>
+              </article>
+            </div>
 
+            <header class="major">
+              <h2>HEALTH</h2>
+            </header>
+            <div class="posts">
+              <article>
+                <ul class="mashroom_list">
+                  <li>
+                    <img src="images/group5.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="images/group6.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="images/group7.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="images/group5.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="images/group6.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="images/group7.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="images/group5.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="images/group6.svg" alt="">
+                  </li>
+                  <li>
+                    <img src="images/group7.svg" alt="">
+                  </li>
+                </ul>
+              </article>
+            </div>
           </section>
         </div>
       </div>
